--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </div>
 
@@ -284,7 +283,7 @@
     <div class="container">
         <footer>
             <div class="float-left">
-                <p class="copyright">All rights reserved 2012   www.blugraphic.com   @blugraphic</p>
+                <p class="copyright hidden-mobile">All rights reserved 2012   www.blugraphic.com   @blugraphic</p>
                 <nav>
                     <a href="">Home</a>
                     <a href="#">About</a>
@@ -301,6 +300,7 @@
                 <a href="#"><div class="glyph-icon flaticon-social-1"></div></a>
                 <a href="#"><div class="glyph-icon flaticon-social-2"></div></a>
             </div>
+            <p class="copyright hidden-desctop">All rights reserved 2012   www.blugraphic.com   @blugraphic</p>
         </footer>
     </div>
 
